--- a/login.html
+++ b/login.html
@@ -16,11 +16,12 @@
 		    	<img src="banner.png" alt="Slashed Games Banner" title="Slashed Games Banner" />  
 			       <div class="navigationbar">
 			      	<ul>
-			      		<li><a href="index.html">Home</a></li>
-			      		<li><a href="">Xbox One</a></li>
-			      		<li><a href="">Xbox 360</a></li>
-			      		<li><a href="">PS4</a></li>
-			      		<li><a href="">PS3</a></li>     		
+			     <li><a href="index.html">Home</a></li>
+			      		<li><a href="XboxOne.html">Xbox One</a></li>
+			      		<li><a href="Xbox360.html">Xbox 360</a></li>
+			      		<li><a href="PS4.html">PS4</a></li>
+			      		<li><a href="ps3.html">PS3</a></li>  
+                        <li><a href="WiiU.html">WiiU</a></a></li>		
 			       </div>	 
 
 		<div class="container">
